feat: add roles search for external api (#12)
* feat: add roles search for external api

* tests: fix sonar issues
