# src/main/java/org/tkit/onecx/iam/kc/domain/model/PageResult.java
@@ -2,16 +2,10 @@ package org.tkit.onecx.iam.kc.domain.model;
 
 import java.util.List;
 
-import org.keycloak.representations.idm.UserRepresentation;
-
 import lombok.Getter;
 
 @Getter
-public class UserPageResult {
-
-    public static UserPageResult empty() {
-        return new UserPageResult(0, List.of(), Page.of(0, 1));
-    }
+public class PageResult<T> {
 
     private final long totalElements;
 
@@ -21,18 +15,14 @@ public class UserPageResult {
 
     private final long totalPages;
 
-    private final List<UserRepresentation> stream;
+    private final List<T> stream;
 
-    public UserPageResult(long totalElements, List<UserRepresentation> stream, Page page) {
+    public PageResult(long totalElements, List<T> stream, Page page) {
         this.totalElements = totalElements;
         this.stream = stream;
         this.number = page.number();
         this.size = page.size();
         this.totalPages = (totalElements + size - 1) / size;
-    }
-
-    public boolean isEmpty() {
-        return totalElements <= 0;
     }
 
     @Override
